force-app/main/default/objects/Zeeshan__c/Zeeshan__c.object-meta.xml
<CustomObject>
    <description>Hyderabadi Restaurant</description>
    <label>Zeeshan</label>
    <nameField>
        <label>Zeeshan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zeeshans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>