force-app/main/default/objects/Zeeshan__c/fields/Add_Cooking_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Add_Cooking_Instruction__c</fullName>
    <label>Add Cooking Instruction</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>