force-app/main/default/objects/Zeeshan__c/fields/Chicken_Biriyani__c.field-meta.xml
<CustomField>
    <fullName>Chicken_Biriyani__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hyderabadi style biriyani prepared with basmati rice which serves 2.</description>
    <label>Chicken Biriyani</label>
    <type>Checkbox</type>
</CustomField>