force-app/main/default/objects/Zeeshan__c/fields/Hotel_Category__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Category__c</fullName>
    <label>Hotel Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>