force-app/main/default/objects/Zeeshan__c/fields/Hotel_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Ranking__c</fullName>
    <label>Hotel Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>